<resources>
    <string name="app_name">TimeRangerv2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="hint_task_title">To-do title</string>
    <string name="hint_task_description">Description</string>
    <string name="title_activity_add_todo">AddTodoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="positive_habit">Positive habit</string>
    <string name="negative_habit">Negative habit</string>
    <string name="description">Description</string>
    <string name="task_name">Task name</string>
</resources>