<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_task_title"
        android:inputType="textAutoComplete"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/add_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_task_description"
        android:inputType="textAutoComplete"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_marginTop="16dp"
        android:text="@string/button_save" />

</LinearLayout>